1999-10-04  Akim Demaille  <akim@epita.fr>

	Revert partially the previous changes: AC_CHECK_HEADERS_DIRENT is
	used by AC_HEADER_DIRENT.

	* autoheader.m4: Restablish the hook for AC_CHECK_HEADERS_DIRENT.

	* acspecific.m4 (AC_CHECK_HEADERS_DIRENT, AC_CHECK_HEADER_DIRENT):
 	Reinserted.

1999-10-02  Akim Demaille  <akim@epita.fr>

	AC_DIR_HEADERS is hasbeen'ed.

	* acspecific.m4 (AC_DIR_HEADER): Raised from obsolete to hasbeen.

	* acspecific.m4 (AC_CHECK_HEADERS_DIRENT, AC_CHECK_HEADER_DIRENT):
 	Removed, were used only by AC_DIR_HEADER and were not documented.

	* autoheader.m4: Remove the hooks for AC_CHECK_HEADERS_DIRENT.

	* autoconf.texi (Particular Headers): Removed the documentation of
	AC_DIR_HEADER.

	* autoconf.texi (Environment Variables): Remove the very last
	traces of documentation of --env-VAR.

1999-10-02  Akim Demaille  <akim@epita.fr>

	Remove hasbeen'ed macros from the documentation.

	* autoconf.texi (Obsolete Macros): Document AC_HASBEEN.

	* autoconf.texi (Libraries): Remove the documentation of
	AC_HAVE_LIB.
	(Particular Headers): likewise for AC_UNISTD_H, AC_MEMORY_H,
	AC_USG.
	(C Compiler Characteristics): Likewise for AC_INT_16_BITS,
	AC_LONG_64_BITS.

1999-10-01  Akim Demaille  <akim@epita.fr>

	Make the handling of the configuration links (AC_LINK_FILES)
	exactly the same as that of configurations files (AC_OUTPUT_FILES)
	and headers (AC_CONFIG_HEADERS).  As a result, it is sane to run
		./config.status src/libmy_lib
	or
		CONFIG_LINKS=src/lib_mylib:lib/lib_mylib ./config.status

	* acgeneral.m4 (AC_LINK_FILES): Use AC_FATAL to diagnose bad
	number of argument.
	Obsoleted (but implemented) in favor of AC_CONFIG_LINKS.

	* acgeneral.m4 (AC_CONFIG_LINKS): New macro.  Takes space
	separated list of DEST:SOURCES arguments.

	* acgeneral.m4: Rename each occurence of AC_LIST_HEADER as
 	AC_LIST_HEADERS for consistency.

	* acgeneral.m4 (AC_OUTPUT, config.status prologue): Move the
	definition of config_files and config_headers to the top.