@@ -2904,8 +2904,10 @@ Usage: $CONFIG_STATUS @BKL@OPTIONS@BKR@ FILE...
   --version    Print the version of Autoconf and exit
   --help       Display this help and exit
 
-dnl Output this only if there are files to instantiate.
-ifset(ifdef([AC_LIST_HEADERS], 1)$1,
+dnl Issue this section only if there were actually config files.
+dnl The following test checks if one of AC_LIST_HEADERS, the CONFIG_FILES
+dnl which are given via [$1], or AC_LIST_LINKS is set.
+ifset(ifdef([AC_LIST_HEADERS], 1)ifdef([AC_LIST_LINKS], 1)[$1],
 [Files to instantiate:
 ifset($1, [  Configuration files:
 \$config_files
@@ -2985,7 +2987,7 @@ EOF
 
 dnl Issue this section only if there were actually config files.
 dnl The following test checks if one of AC_LIST_HEADERS, the CONFIG_FILES
-dnl which are given via $1, or AC_LIST_LINKS is set.
+dnl which are given via [$1], or AC_LIST_LINKS is set.
 ifset(ifdef([AC_LIST_HEADERS], 1)ifdef([AC_LIST_LINKS], 1)[$1],
 [cat >> $CONFIG_STATUS <<EOF
 # If there were arguments, don't assign a default value.
